added documentation for /user
