# swagger.json
@@ -349,6 +349,348 @@
           }
         }
       }
+    },
+    "/users": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Create a new user",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User info to create a new user.",
+            "required": true,
+            "example": {
+              "name": "superloser",
+              "email": "stevejobs@apple.com"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User successfully created.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "userid_1233",
+                  "email": "stevejobs@apple.com",
+                  "chats": [],
+                  "chatRequests": [],
+                  "friends": [],
+                  "friendRequests": [],
+                  "tokens": []
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "User creation failed."
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Get a user by id",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully found.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "userid_1233",
+                  "email": "stevejobs@apple.com",
+                  "chats": [],
+                  "chatRequests": [],
+                  "friends": [],
+                  "friendRequests": [],
+                  "tokens": []
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Get user failed."
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Delete a user by id",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully removed.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "userid_1233",
+                  "email": "stevejobs@apple.com",
+                  "chats": [],
+                  "chatRequests": [],
+                  "friends": [],
+                  "friendRequests": [],
+                  "tokens": []
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Failed to delete user."
+          }
+        }
+      }
+    },
+    "/users/addChat": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Add user to a chat",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User and chat info to add user to chat.",
+            "required": true,
+            "example": {
+              "userid": "5dba164e8f73153ba8930430",
+              "chatid": "5dba16978f73153ba8930431"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully added to chat.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "userid_1233",
+                  "email": "stevejobs@apple.com",
+                  "chats": [
+                    "5dba16978f73153ba8930431"
+                  ],
+                  "chatRequests": [],
+                  "friends": [],
+                  "friendRequests": [],
+                  "tokens": []
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Adding failed."
+          }
+        }
+      }
+    },
+    "/users/removeChat": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Remove user from a chat",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User and chat info to remove user from chat.",
+            "required": true,
+            "example": {
+              "userid": "5dba164e8f73153ba8930430",
+              "chatid": "5dba16978f73153ba8930431"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully removed from chat.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "userid_1233",
+                  "email": "stevejobs@apple.com",
+                  "chats": [],
+                  "chatRequests": [],
+                  "friends": [],
+                  "friendRequests": [],
+                  "tokens": []
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Removing failed."
+          }
+        }
+      }
+    },
+    "/users/addFriend": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Add a friend",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User sends friend request to specified user.",
+            "required": true,
+            "example": {
+              "id": "userid_1234",
+              "friendid": "friendid_112345"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Friend request sent."
+          },
+          "400": {
+            "description": "Friend request failed."
+          }
+        }
+      }
+    },
+    "/users/removeFriend": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Remove a friend",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "User sends request to server to remove a friend.",
+            "required": true,
+            "example": {
+              "id": "userid_1234",
+              "friendid": "friendid_112345"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Friend removed."
+          },
+          "400": {
+            "description": "Friend removal failed."
+          }
+        }
+      }
+    },
+    "/users/profile": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Modify the user's profile information.",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Update user profile info.",
+            "required": true,
+            "example": {
+              "userid": "5dba164e8f73153ba8930430 *",
+              "profile": {
+                "name": "steve jobless",
+                "location": "Seattle, WA",
+                "about": "Harnessing the power of my grave!",
+                "picture": "cloudinary.com/jldkasjlkdwjklwda"
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User profile information successfully modified.",
+            "content": {
+              "application/json": {
+                "example": {
+                  "_id": "userid_1233",
+                  "email": "stevejobs@apple.com",
+                  "chats": [
+                    "5dba16978f73153ba8930431"
+                  ],
+                  "chatRequests": [],
+                  "friends": [],
+                  "friendRequests": [],
+                  "tokens": [],
+                  "profile": []
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Modifying profile failed."
+          }
+        }
+      }
     }
   },
   "components": {
